--- a/templates/partials/footerLogin.hbs
+++ b/templates/partials/footerLogin.hbs
@@ -1,5 +1,5 @@
 <footerLogin id="footer">
     <p>Created By <a href="https://github.com/jainanurag941">Anurag Jain</a></p>
     <a class="fLinks" href="https://www.linkedin.com/in/anurag-jain-442ba4190/"><i class="linked fab fa-linkedin"></i></a>
-    <a class="fLinks" href="mailto:jainanurag941@email.com"><i class="email fas fa-envelope"></i></a>
+    <a class="fLinks" href="mailto:jainanurag941@gmail.com"><i class="email fas fa-envelope"></i></a>
 </footerLogin>
