--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -169,8 +169,8 @@ h3{
     border-radius: 30px;
     color: white;
     display: none;
-    margin-left: 900px;
-    margin-top: 80px;
+    margin-left: 37vw;
+    margin-top: 15vh;
     height: 260px;
 }
 label{
