--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -77,7 +77,7 @@
 
     <div class="container">
         <button class="task-button">
-            <span class="button__text">Add task</span>
+            <span class="button__text hide-sm">Add task</span>
             <span class="button__icon">
                 <ion-icon name="add-circle-outline"></ion-icon>
             </span>
