Bugs Fixed & UI Changed

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -72,6 +72,7 @@ h3 {
 }
 
 .container {
+  border: 2px solid black;
   background: linear-gradient(90deg, #e8ecef 0%, #cdf0ea 35%, #feffde 100%);
   max-width: 1100px;
   margin: auto;
@@ -79,6 +80,8 @@ h3 {
   padding: 1rem 2rem;
   margin-top: 6rem;
   margin-bottom: 3rem;
+  box-shadow: 5px 5px 10px #04204e;
+  border-radius: 30px;
 }
 
 /* Form */
@@ -90,14 +93,6 @@ label {
   font-family: "Montserrat", sans-serif;
   color: black;
   font-size: 1.2rem;
-}
-
-.my-1 {
-  margin: 0 0.5rem 0 0;
-}
-
-.my-2 {
-  margin: 0 0 0 0.5rem;
 }
 
 .form input[type="text"],
@@ -138,4 +133,15 @@ footer a:hover {
 
 .email {
   color: black;
+}
+
+/* Mobile Styles */
+@media (max-width: 850px) {
+  .container {
+    border: 1px solid black;
+    box-shadow: 5px 5px 80px #04204e;
+  }
+  .large {
+    font-size: 1.8rem;
+  }
 }
