--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -67,15 +67,15 @@
                 </div>
                 <button type="submit" class="btn btn-dark">Login</button>
               </form>
-
+              <h6 class="my-1">Don't have an account? <a href="/register">Sign Up</a></h4>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    {{>footerLogin}}
   </div>
+
+  {{>footerLogin}}
 
   <script src="/js/login.js"></script>
 </body>
