--- a/templates/views/profile.hbs
+++ b/templates/views/profile.hbs
@@ -48,7 +48,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="/dashboard">Home</a>
+                            <a class="nav-link" href="/dashboard">My Tasks</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
@@ -85,8 +85,7 @@
                 <label>Age</label><br>
                 <input type="number" placeholder="Age" id="age" value="" name="age" />
             </div>
-            <button type="submit" class="btn btn-dark my-1">Update</button>
-            <a class="btn btn-light my-2" href="/dashboard">Go Back</a>
+            <button type="submit" class="btn btn-dark">Update</button>
       </form>
     </section>
 
@@ -99,8 +98,7 @@
                 <label><i class="fas fa-key"></i> New Password</label><br>
                 <input type="password" placeholder="Password" id="password" value="" name="password" />
             </div>
-            <button type="submit" class="btn btn-dark my-1">Update</button>
-            <a class="btn btn-light my-2" href="/dashboard">Go Back</a>
+            <button type="submit" class="btn btn-dark">Update</button>
       </form>
     </section>
 
