--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,76 +1,85 @@
 * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .menu-bar {
-    background-image: linear-gradient(-90deg, #04204e, #d38312);
+  background-image: linear-gradient(-90deg, #04204e, #d38312);
 }
 .nav-link {
-    font-size: 16px;
-    margin: 3px;
-    color: #fff!important;
-    font-weight: 500;
+  font-size: 16px;
+  margin: 3px;
+  color: #fff !important;
+  font-weight: 500;
 }
 .navbar-nav {
-    text-align: right;
-    margin-right: 20px;
+  text-align: right;
+  margin-right: 20px;
 }
 .menu-bar .navbar-toggler {
-    padding-right: 20px;
-    outline: none!important;
-    border: none!important;
+  padding-right: 20px;
+  outline: none !important;
+  border: none !important;
 }
 .navbar .fa {
-    color: #fff!important;
-    font-size: 26px;
+  color: #fff !important;
+  font-size: 26px;
 }
 .nav-link:hover {
-    font-weight: 600;
-    border-bottom: 1px solid #fff;
+  font-weight: 600;
+  border-bottom: 1px solid #fff;
 }
 .navbar-brand img {
-    width: 43px;
-    margin-top: 5px;
-    margin-left: 15px;
+  width: 43px;
+  margin-top: 5px;
+  margin-left: 15px;
 }
 @media only screen and (max-width: 1000px) {
-    .nav-link:hover {
-        border-bottom: none!important;
-        font-weight: bold;
-    }
+  .nav-link:hover {
+    border-bottom: none !important;
+    font-weight: bold;
+  }
 }
 
 body {
-    background: linear-gradient(to right, #ffd194, #70e1f5); 
+  background: linear-gradient(to right, #ffd194, #70e1f5);
 }
 
-footerLogin {
-    text-align: center;
-    background-image: linear-gradient(-90deg, #04204e, #d38312);
-    padding: 16px 0;
-}
-footerLogin a {
-    color: #888888;
-    margin-right: 16px;
-    text-decoration: none;
+.my-1 {
+  margin: 1rem 0;
 }
 
-footerLogin a:hover {
-    color: #04204e;
-    text-decoration: none;
+footer {
+  text-align: center;
+  background-image: linear-gradient(-90deg, #04204e, #d38312);
+  padding: 16px 0;
+}
+footer a {
+  color: #888888;
+  margin-right: 16px;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #04204e;
+  text-decoration: none;
 }
 .email {
-    color:black;
+  color: black;
 }
 
 #page-container {
-    position: relative;
-    min-height: 100vh;
+  position: relative;
+  min-height: 100vh;
 }
 
-#footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+h6 a {
+  color: #d38312;
+  margin-right: 16px;
+  text-decoration: none;
+}
+
+h6 a:hover {
+  color: #04204e;
+  text-decoration: none;
 }
