--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
 .nav-link {
   font-size: 16px;
   margin: 3px;
-  color: #fff!important;
+  color: #fff !important;
   font-weight: 500;
 }
 .navbar-nav {
@@ -13,11 +13,11 @@
 }
 .menu-bar .navbar-toggler {
   padding-right: 20px;
-  outline: none!important;
-  border: none!important;
+  outline: none !important;
+  border: none !important;
 }
 .navbar .fa {
-  color: #fff!important;
+  color: #fff !important;
   font-size: 26px;
 }
 .nav-link:hover {
@@ -31,45 +31,56 @@
 }
 @media only screen and (max-width: 1000px) {
   .nav-link:hover {
-      border-bottom: none!important;
-      font-weight: bold;
+    border-bottom: none !important;
+    font-weight: bold;
   }
 }
 
 body {
-  background-color: #E8ECEF;
+  background-color: #e8ecef;
 }
-  
+
+.my-1 {
+  margin-right: 0.5rem;
+}
+
+.my-2 {
+  margin-left: 0.5rem;
+}
+
 .centered {
   padding-top: 200px;
   text-align: center;
 }
-  
+
 .secret-text {
   text-align: center;
   font-size: 2rem;
   color: #fff;
   background-color: #000;
 }
-footerLogin {
+footer {
   text-align: center;
   background-image: linear-gradient(-90deg, #04204e, #d38312);
   padding: 16px 0;
 }
-footerLogin a {
+footer a {
   color: #888888;
   margin-right: 16px;
   text-decoration: none;
 }
 
-footerLogin a:hover {
+footer a:hover {
   color: #04204e;
   text-decoration: none;
 }
 .email {
-  color:black;
+  color: black;
 }
-#footer {
-  position: absolute;
-  width: 100%;
+
+/* Mobile Styles */
+@media (max-width: 850px) {
+  .textSize {
+    font-size: 1.4rem;
+  }
 }
