--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -52,11 +52,11 @@
     <div class="jumbotron centered">
       <div class="container">
         <i class="fas fa-tasks fa-7x"></i>
-        <h1 class="display-5">Welcome to Task Manager App</h1>
+        <h1 class="display-5 textSize">Welcome to Task Manager App</h1>
         <p class="lead">Easily Create and Manage your tasks !!</p>
         <hr>
-        <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-        <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
+        <a class="btn btn-light btn-lg my-1" href="/register" role="button">Register</a>
+        <a class="btn btn-dark btn-lg my-2" href="/login" role="button">Login</a>
 
       </div>
     </div>
