--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -27,60 +27,60 @@
 
 <body>
   <div class="header">
-        <div class="menu-bar">
-            <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand"><img src="./img/logo.png" alt="logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <i class="fa fa-bars"></i>
-                </button>
+    <div class="menu-bar">
+      <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand"><img src="./img/logo.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <i class="fa fa-bars"></i>
+        </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#footer">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#footer">Contact Us</a>
+            </li>
+          </ul>
         </div>
+      </nav>
     </div>
+  </div>
 
   <div id="page-container">
-  <div class="container mt-5">
-    <h1>Create your account <i class="fas fa-user-plus"></i></h1>
-    <div class="row">
-      <div class="col-sm-8">
-        <div class="card">
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label><i class="fas fa-user"></i> Username</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Username">
-              </div>
-              <div class="form-group">
-                <label><i class="fas fa-envelope"></i> Email</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
-              </div>
-              <div class="form-group">
-                <label><i class="fas fa-key"></i> Password</label>
-                <input type="password" class="form-control" aria-describedby="passwordHelp" id="password" name="password" placeholder="*********">
-                <small id="passwordHelp" class="form-text text-muted">Password must be greater than 6 characters.</small>
-              </div>
-              <button type="submit" class="btn btn-dark">Register</button>
-            </form>
-
+    <div class="container mt-5">
+      <h1>Create your account <i class="fas fa-user-plus"></i></h1>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="card">
+            <div class="card-body">
+              <form>
+                <div class="form-group">
+                  <label><i class="fas fa-user"></i> Username</label>
+                  <input type="text" class="form-control" id="username" name="username" placeholder="Username">
+                </div>
+                <div class="form-group">
+                  <label><i class="fas fa-envelope"></i> Email</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email">
+                </div>
+                <div class="form-group">
+                  <label><i class="fas fa-key"></i> Password</label>
+                  <input type="password" class="form-control" aria-describedby="passwordHelp" id="password" name="password" placeholder="*********">
+                  <small id="passwordHelp" class="form-text text-muted">Password must be greater than 6 characters.</small>
+                </div>
+                <button type="submit" class="btn btn-dark">Register</button>
+              </form>
+              <h6 class="my-1">Already Have an Account? <a href="/login">Log In</a></h6>
+           </div>
           </div>
         </div>
       </div>
     </div>
   </div>
   {{>footerLogin}}
-  </div>
   <script src="/js/register.js"></script>
 </body>
 
