--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -69,9 +69,7 @@
     </div>
 
     <div id="newTask">
-        <button type="button" class="close" aria-label="Close">
-            <span aria-hidden="true" class="cancelButton">&times;</span>
-        </button>
+        <ion-icon name="close-circle-outline" class="close cancelButton"></ion-icon>
         <h2 class="addInfo">Add Task</h2>
         <form class="addingtask">  
             <input type="text" id="taskDesc">
