Fix temporary change

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,7 +1,6 @@
 <footer id="footer">
-    <p>Created By Anurag Jain & Anubhav Pandey</a></p>
-    {{!-- <p>Created By <a href="https://github.com/jainanurag941">Anurag Jain</a></p> --}}
+    <p>Created By <a href="https://github.com/jainanurag941">Anurag Jain</a></p>
     <a class="fLinks" href="https://www.linkedin.com/in/anurag-jain-442ba4190/"><i class="linked fab fa-linkedin"></i></a>
     <a class="fLinks" href="mailto:jainanurag941@gmail.com"><i class="email fas fa-envelope"></i></a><br>
-    {{!-- <a class="fLinks" href="https://www.freepik.com/photos/background">Background photo created by rawpixel.com - www.freepik.com</a> --}}
+    <a class="fLinks" href="https://www.freepik.com/photos/background">Background photo created by rawpixel.com - www.freepik.com</a>
 </footer>
